# stock

./: README.md  docker-compose.yml
api/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/api_test/: api.http
api/stock/: main.py
api/stock/config/: database.py
api/stock/models/: trade.py
api/stock/repositories/: stock.py  trade.py
api/stock/routers/: gain.py  quote.py  stock.py  trade.py
api/stock/schemas/: gain.py  main.py  quote.py  stock.py  trade.py
api/stock/services/: gain.py  quote.py  stock.py  trade.py
api/stock/utils/: app_exceptions.py
api/tests/: test_root.py
api/tests/repositories/: test_trade.py
api/tests/routers/: test_gain.py  test_quote.py  test_trade.py
api/tests/schemas/: test_gain.py  test_quote.py  test_symbol_gain.py  testdata.py
api/tests/services/: test_gain.py  test_quote.py  test_trade.py
api/tests/utils/: test_app_exceptions.py
web/: Dockerfile  README.md  nginx-proxy.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  flag.css  main.tsx
web/src/components/: ColorNumber.tsx  DonutChart.tsx  HoldingTable.tsx  PieChart.tsx  SymbolCombobox.tsx  TradeTable.tsx
web/src/hooks/: index.ts
web/src/pages/: ChartPage.tsx  PortfolioPage.tsx
web/src/recoil/: atoms.ts  index.ts  selectors.ts
web/src/utils/: api.ts  types.ts  util.ts
